--- a/arch/arm64/configs/b1c1_defconfig
+++ b/arch/arm64/configs/b1c1_defconfig
@@ -440,8 +440,15 @@ CONFIG_PCI_MSM=y
 # CONFIG_PCI_HOST_THUNDER_ECAM is not set
 
 #
-# Kernel Features
+# Franken Features
 #
+CONFIG_CPU_INPUT_BOOST=y
+CONFIG_INPUT_BOOST_FREQ_LP=1056000
+CONFIG_INPUT_BOOST_FREQ_PERF=902400
+CONFIG_REMOVE_INPUT_BOOST_FREQ_LP=576000
+CONFIG_REMOVE_INPUT_BOOST_FREQ_PERF=825600
+CONFIG_DEVFREQ_BOOST=y
+CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=4577
 
 #
 # ARM errata workarounds via the alternatives framework
