defconfig:sound and gesture controls
Also this is Franken

--- a/arch/arm64/configs/b1c1_defconfig
+++ b/arch/arm64/configs/b1c1_defconfig
@@ -45,7 +45,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-unicornblood-bluecross-p"
+CONFIG_LOCALVERSION="-FrankenUB"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZ4=y
@@ -449,6 +449,8 @@ CONFIG_REMOVE_INPUT_BOOST_FREQ_LP=576000
 CONFIG_REMOVE_INPUT_BOOST_FREQ_PERF=825600
 CONFIG_DEVFREQ_BOOST=y
 CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=4577
+CONFIG_WAKE_GESTURES=y
+CONFIG_SOUND_CONTROL=y
 
 #
 # ARM errata workarounds via the alternatives framework
@@ -1355,7 +1357,7 @@ CONFIG_ACCESS_RAMOOPS=y
 # CONFIG_EEPROM_LEGACY is not set
 # CONFIG_EEPROM_MAX6875 is not set
 # CONFIG_EEPROM_93CX6 is not set
-# CONFIG_EEPROM_93XX46 is not set
+# CONFIG_EEPROM_93XX46 is not setCONFIG_SOUND_CONTROL=y
 # CONFIG_CB710_CORE is not set
 
 #
