This Be that Cherry-picker Franken

--- a/arch/arm64/configs/b1c1_defconfig
+++ b/arch/arm64/configs/b1c1_defconfig
@@ -45,7 +45,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-unicornblood-bluecross-p"
+CONFIG_LOCALVERSION="-Franken-FU-UB"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZ4=y
@@ -442,6 +442,11 @@ CONFIG_PCI_MSM=y
 #
 # Kernel Features
 #
+CONFIG_CPU_INPUT_BOOST=y
+CONFIG_INPUT_BOOST_FREQ_LP=1056000
+CONFIG_INPUT_BOOST_FREQ_PERF=902400
+CONFIG_REMOVE_INPUT_BOOST_FREQ_LP=576000
+CONFIG_REMOVE_INPUT_BOOST_FREQ_PERF=825600
 
 #
 # ARM errata workarounds via the alternatives framework
