wakelock blocker and a fix

--- a/arch/arm64/configs/b1c1_defconfig
+++ b/arch/arm64/configs/b1c1_defconfig
@@ -45,7 +45,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Franken-FU-UB"
+CONFIG_LOCALVERSION="-Franken-CP"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZ4=y
@@ -440,8 +440,9 @@ CONFIG_PCI_MSM=y
 # CONFIG_PCI_HOST_THUNDER_ECAM is not set
 
 #
-# Kernel Features
+# FRanken Features for cool cherry pickers
 #
+CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_CPU_INPUT_BOOST=y
 CONFIG_INPUT_BOOST_FREQ_LP=1056000
 CONFIG_INPUT_BOOST_FREQ_PERF=902400
