--- a/arch/arm64/configs/b1c1_defconfig
+++ b/arch/arm64/configs/b1c1_defconfig
@@ -449,6 +449,7 @@ CONFIG_INPUT_BOOST_FREQ_LP=1056000
 CONFIG_INPUT_BOOST_FREQ_PERF=902400
 CONFIG_REMOVE_INPUT_BOOST_FREQ_LP=576000
 CONFIG_REMOVE_INPUT_BOOST_FREQ_PERF=825600
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 # ARM errata workarounds via the alternatives framework
