--- a/arch/arm64/configs/b1c1_defconfig
+++ b/arch/arm64/configs/b1c1_defconfig
@@ -453,6 +453,7 @@ CONFIG_REMOVE_INPUT_BOOST_FREQ_LP=576000
 CONFIG_REMOVE_INPUT_BOOST_FREQ_PERF=825600
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_TCP_CONG_SOCIOPATH=y
+CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
 
 #
 # ARM errata workarounds via the alternatives framework
