--- a/arch/arm64/configs/b1c1_defconfig
+++ b/arch/arm64/configs/b1c1_defconfig
@@ -451,6 +451,9 @@ CONFIG_INPUT_BOOST_FREQ_LP=1056000
 CONFIG_INPUT_BOOST_FREQ_PERF=902400
 CONFIG_REMOVE_INPUT_BOOST_FREQ_LP=576000
 CONFIG_REMOVE_INPUT_BOOST_FREQ_PERF=825600
+CONFIG_DEVFREQ_BOOST=y
+CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=1000
+CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=902400
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_TCP_CONG_SOCIOPATH=y
 CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
