--- a/arch/arm64/configs/b1c1_defconfig
+++ b/arch/arm64/configs/b1c1_defconfig
@@ -45,7 +45,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-unicornblood-bluecross-p"
+CONFIG_LOCALVERSION="-FrankenCP"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZ4=y
@@ -59,6 +59,12 @@ CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_FHANDLE is not set
 # CONFIG_USELIB is not set
 # CONFIG_AUDITSYSCALL is not set
+
+#
+#Franken CP
+#
+CONFIG_IOSCHED_ANXIETY=y
+CONFIG_IOSCHED_TRIPNDROID=y
 
 #
 # IRQ subsystem
