--- a/arch/arm64/configs/b1c1_defconfig
+++ b/arch/arm64/configs/b1c1_defconfig
@@ -65,6 +65,7 @@ CONFIG_CROSS_MEMORY_ATTACH=y
 #
 CONFIG_IOSCHED_ANXIETY=y
 CONFIG_IOSCHED_TRIPNDROID=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
 
 #
 # IRQ subsystem
