--- a/arch/arm64/configs/b1c1_defconfig
+++ b/arch/arm64/configs/b1c1_defconfig
@@ -66,6 +66,7 @@ CONFIG_CROSS_MEMORY_ATTACH=y
 CONFIG_IOSCHED_ANXIETY=y
 CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
+CONFIG_KLAPSE=y
 
 #
 # IRQ subsystem
